--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="style.css">
+    
     <title>Kalendering Dipovil</title>
   </head>
   <body style="width: 1920px; height: 1080px;" class="p-5" >
     <h1 class="text-center pb-3 text-uppercase" >Kalendering Dipovil</h1>
-
+    
     <table class="table table-striped table-hover table-bordered">
+      <img src="/LOGO DIPOVIL.png" class="position-absolute translate-middle" alt="">
         <thead>
           <tr class="text-center">
             <th scope="col">No</th>
