--- a/index.html
+++ b/index.html
@@ -11,13 +11,22 @@
     
     <title>Kalendering Dipovil</title>
   </head>
-  <body style="width: 1920px; height: 1080px;" class="p-5" >
-    <h1 class="text-center pb-3 text-uppercase" >Kalendering Dipovil</h1>
+  <body  >
+    <nav class="navbar navbar-light bg-light fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+        </a>
+      </div>
+    </nav>
+
+<div style="width: 1920px; height: 1080px;" class="p-5" >
+
+    <h1 class="text-center pb-3 text-uppercase" ><span class="text-success">Kalendering</span> Dipovil</h1>
     
-    <table class="table table-striped table-hover table-bordered">
-      <img src="/LOGO DIPOVIL.png" class="position-absolute translate-middle" alt="">
+    <table class="table table-striped table-hover table-bordered border-success">
+      <img src="/LOGO DIPOVIL.png" class="position-absolute translate-middle logo" alt="">
         <thead>
-          <tr class="text-center">
+          <tr class="text-center text-uppercase">
             <th scope="col">No</th>
             <th scope="col">Nama Lomba</th>
             <th scope="col">Jenis Lomba</th>
@@ -103,6 +112,18 @@
         </tbody>
       </table>
 
+    </div>
+
+
+
+    <nav class="navbar navbar-light bg-light fixed-bottom">
+      <div class="container">
+        <p class="fs-3 text-center text-white">DIPOVIL 2021</p>
+        <p class="fs-3 text-center text-white">DIPOVIL 2021</p>
+        <p class="fs-3 text-center text-white">DIPOVIL 2021</p>
+      </div>
+    </nav>
+    <body>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
