--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
     </nav>
 
-<div style="width: 1920px; height: 1080px;" class="p-5" >
+<div style="width: 1920px; " class="p-5" >
 
     <h1 class="text-center pb-3 text-uppercase" ><span class="text-success">Kalendering</span> Dipovil</h1>
     
